マスタにアイテム種類追加

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -34,6 +34,7 @@ html lang="en"
               .dropdown-menu
                 = link_to 'サイト種類', site_kinds_path, {class: "dropdown-item"}
                 = link_to 'サーバ種類', server_kinds_path, {class: "dropdown-item"}
+                = link_to 'アイテム種類', item_kinds_path, {class: "dropdown-item"}
           - else
             = link_to '最新情報', root_path, {class: "nav-link"}
 
