--- a/app/views/portals/index.html.slim
+++ b/app/views/portals/index.html.slim
@@ -19,9 +19,9 @@
         br
         br
         h2.font-weight-bold
-          = "日々、市場情報を蓄積しています。"
+          = "いつもご協力ありがとうございます。"
           p
-            = "蓄積された情報から、露店価格を設定しよう！"
+          = "皆様のご協力(情報登録)で成り立っています。新規・間違いがありましたら、変更お願いいたします。"
     .row
       .col-sm-2
       - unless current_user.present?
@@ -36,19 +36,11 @@
       .col-sm-4
         .main2-sub
           h3
-            = "市場履歴"
-            p
-              = image_tag "stock.jpg", size: "250x250"
-            p
-              = "取引された履歴が確認出来ます。"
-      .col-sm-4
-        .main2-sub
-          h3
             = "アイテム検索"
             p
               = image_tag "search.jpg", size: "250x250"
             p
-              = "売買したいアイテムを検索することができます。"
+              = "目指したいアイテムを検索することができます。"
       .col-sm-4
         .main2-sub
           h3
@@ -56,7 +48,7 @@
             p
               = image_tag "sns.jpg", size: "250x250"
             p
-              = "Twitterと連携しているため、定期的に当サイトを確認しなくても最新情報をゲット出来ます。"
+              = "Twitterと連携しているため、定期的に当サイトを確認しなくても最新情報をゲット出来ます。※未実装"
 
 .main3-app
   .container
