--- a/app/views/static_pages/info.html.slim
+++ b/app/views/static_pages/info.html.slim
@@ -8,9 +8,9 @@ ul
 h2 ◆仕様
 ul
   li
-    | 毎日、相場情報を蓄積しています。
+    | アイテムのDROP情報を検索できます。
   li
-    | 相場情報を検索し、価格設定に利用することが出来ます。
+    | 皆様のご協力(情報登録)で成り立っています。新規・間違いがありましたら、変更お願いいたします。
 
 h2 ◆留意事項
 ul
