--- a/app/views/mob_items/show.html.slim
+++ b/app/views/mob_items/show.html.slim
@@ -2,7 +2,7 @@ h1 参照
 hr
 .card
   .card-header
-    strong = "#{t('activerecord.attributes.mob.named')}:"
+    strong = "#{t('activerecord.attributes.mob.name')}:"
   .card-body
     = @mob_item.mob.name
 .card
