--- a/app/views/item_kinds/index.html.slim
+++ b/app/views/item_kinds/index.html.slim
@@ -14,7 +14,7 @@ hr
       .btn-group.mr-2
         = button_tag t('helpers.submit.close'), type: 'button', class: "btn btn-secondary", onclick: 'window.close()'
     - else
-      - if admin_user?
+      - if login?
         .btn-group.mr-2
           = link_to t('helpers.submit.create'), new_item_kind_path, class: "btn btn-secondary"
 
