情報欄を部分テンプレート化

--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -1,4 +1,4 @@
-h1 参照
+h1 = t('.title')
 hr
 .card
   .card-header
@@ -15,6 +15,11 @@ hr
     strong = "#{t('activerecord.attributes.item.image')}:"
   .card-body
     = image_tag @item.image.to_s
+.card
+  .card-header
+    strong = "#{t('.mob.name')}:"
+  .card-body
+    = render 'shared/list', list: @item.mobs
 
 hr
 .btn-toolbar
