--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -14,7 +14,9 @@ hr
   .card-header
     strong = "#{t('activerecord.attributes.item.image')}:"
   .card-body
-    = image_tag @item.image.to_s
+    - src = 'now_printing.png'
+    - src = @item.image.to_s if @item.image.present?
+    = image_tag(src, size: '100x100')
 .card
   .card-header
     strong = "#{t('.mob.name')}:"
