TOPの文字色変更

--- a/app/views/portals/index.html.slim
+++ b/app/views/portals/index.html.slim
@@ -18,7 +18,7 @@
         br
         br
         br
-        h2.font-weight-bold
+        h2.font-weight-bold style="color: white;"
           = "いつもご協力ありがとうございます。"
           p
           = "皆様のご協力で成り立っています♪ご自由に編集ください。"
