Item/Mob用のCardを用意

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,12 +5,7 @@ html lang="en"
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    meta name="twitter:card" content="summary"
-    / 大きいサイズ：meta name="twitter:card" content="summary_large_image"
-    meta name="twitter:site" content="@#{Settings.system[:twitter_site]}"
-    meta name="og:title" content="#{Settings.system[:title]}"
-    meta name="og:description" content="#{Settings.system[:description]}"
-    meta name="og:image" content="#{Settings.system[:url]}/#{image_path('eyecatch.jpg')}"
+    = render_any %w(card layouts/card)
     = favicon_link_tag
     title= content_for?(:title) ? yield(:title) : Settings.system[:title]
     = csrf_meta_tags
