マップエリアの概念を追加

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,6 +33,7 @@ html lang="en"
               .dropdown-menu
                 = link_to 'アイテム種類', item_kinds_path, {class: "dropdown-item"}
                 = link_to 'アイテム', items_path, {class: "dropdown-item"}
+                = link_to 'マップエリア', map_areas_path, {class: "dropdown-item"}
                 = link_to 'モンスター', mobs_path, {class: "dropdown-item"}
                 = link_to 'モンスター・アイテム', mob_items_path, {class: "dropdown-item"}
 
