--- a/app/views/map_areas/_form.html.slim
+++ b/app/views/map_areas/_form.html.slim
@@ -1,11 +1,9 @@
-= simple_form_for(@mob) do |f|
+= simple_form_for(@map_area) do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
   .form-inputs
-    = f.association :map_area
     = f.input :name
-    = f.input :image
 
   hr
   
@@ -13,5 +11,7 @@
     .btn-group.mr-2
       .form-actions
         = f.button :submit, class: "btn btn-primary"
+    .btn-group.mr-2
+      = link_to t('simple_form.btn.back'), map_areas_path, class: "btn btn-secondary"
   
   hr
