--- a/app/views/items/index.html.slim
+++ b/app/views/items/index.html.slim
@@ -14,7 +14,7 @@ hr
       .btn-group.mr-2
         = button_tag t('helpers.submit.close'), type: 'button', class: "btn btn-secondary", onclick: 'window.close()'
     - else
-      - if login?
+      - if admin_user?
         .btn-group.mr-2
           = link_to t('helpers.submit.create'), new_item_path, class: "btn btn-secondary"
 
@@ -27,7 +27,7 @@ table.table.table-striped.table-hover.table-responsive.table-bordered
       th = sort_link(@q, :name)
       - if params[:mode] != 'dialog'
         th
-        - if login?
+        - if admin_user?
           th
           th
 
@@ -38,7 +38,7 @@ table.table.table-striped.table-hover.table-responsive.table-bordered
         td = item.name
         td
           = link_to t('simple_form.btn.show'), item, class: 'btn btn-light'
-        - if login?
+        - if admin_user?
           td
             = link_to t('simple_form.btn.edit'), edit_item_path(item), class: 'btn btn-light'
           td
