--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -25,7 +25,7 @@ hr
 
 hr
 .btn-toolbar
-  - if login?
+  - if admin_user?
     .btn-group.mr-2
       = link_to t('simple_form.btn.edit'), edit_item_path(@item), class: "btn btn-primary"
   .btn-group.mr-2
