--- a/app/views/mob_items/index.html.slim
+++ b/app/views/mob_items/index.html.slim
@@ -15,7 +15,7 @@ hr
       .btn-group.mr-2
         = button_tag t('helpers.submit.close'), type: 'button', class: "btn btn-secondary", onclick: 'window.close()'
     - else
-      - if login?
+      - if admin_user?
         .btn-group.mr-2
           = link_to t('helpers.submit.create'), new_mob_item_path, class: "btn btn-secondary"
 
@@ -28,7 +28,7 @@ table.table.table-striped.table-hover.table-responsive.table-bordered
       th = sort_link(@q, :item_name ,t('.item.name'))
       - if params[:mode] != 'dialog'
         th
-        - if login?
+        - if admin_user?
           th
           th
 
@@ -39,7 +39,7 @@ table.table.table-striped.table-hover.table-responsive.table-bordered
         td = mob_item.item.name
         td
           = link_to t('simple_form.btn.show'), mob_item, class: 'btn btn-light'
-        - if login?
+        - if admin_user?
           td
             = link_to t('simple_form.btn.edit'), edit_mob_item_path(mob_item), class: 'btn btn-light'
           td
