--- a/app/views/mob_items/show.html.slim
+++ b/app/views/mob_items/show.html.slim
@@ -13,7 +13,7 @@ hr
 
 hr
 .btn-toolbar
-  - if login?
+  - if admin_user?
     .btn-group.mr-2
       = link_to t('simple_form.btn.edit'), edit_mob_item_path(@mob_item), class: "btn btn-primary"
   .btn-group.mr-2
