--- a/app/views/mobs/index.html.slim
+++ b/app/views/mobs/index.html.slim
@@ -3,6 +3,9 @@ hr
 = search_form_for @q do |f|
   .row
     .col-sm-5
+      = f.label :map_area_id_in, t('activerecord.attributes.mob.map_area')
+      br
+      = f.collection_check_boxes :map_area_id_in, MapArea.all, :id, :name
       = f.input :name_cont, required: false, label: t('activerecord.attributes.mob.name')
       = hidden_field_tag :mode, params[:mode]
   .btn-toolbar
@@ -14,7 +17,7 @@ hr
       .btn-group.mr-2
         = button_tag t('helpers.submit.close'), type: 'button', class: "btn btn-secondary", onclick: 'window.close()'
     - else
-      - if login?
+      - if admin_user?
         .btn-group.mr-2
           = link_to t('helpers.submit.create'), new_mob_path, class: "btn btn-secondary"
 
@@ -23,20 +26,22 @@ hr
 table.table.table-striped.table-hover.table-responsive.table-bordered
   thead
     tr
+      th = sort_link(@q, :map_area_name, t('activerecord.attributes.mob.map_area'))
       th = sort_link(@q, :name)
       - if params[:mode] != 'dialog'
         th
-        - if login?
+        - if admin_user?
           th
           th
 
   tbody
     - @mobs.each do |mob|
       tr
+        td = mob.map_area.try(:name)
         td = mob.name
         td
           = link_to t('simple_form.btn.show'), mob, class: 'btn btn-light'
-        - if login?
+        - if admin_user?
           td
             = link_to t('simple_form.btn.edit'), edit_mob_path(mob), class: 'btn btn-light'
           td
