--- a/app/views/mobs/show.html.slim
+++ b/app/views/mobs/show.html.slim
@@ -2,6 +2,11 @@ h1 = t('.title')
 hr
 .card
   .card-header
+    strong = "#{t('activerecord.attributes.mob.map_area')}:"
+  .card-body
+    = @mob.map_area.try(:name)
+.card
+  .card-header
     strong = "#{t('activerecord.attributes.mob.name')}:"
   .card-body
     = @mob.name
@@ -20,7 +25,7 @@ hr
 
 hr
 .btn-toolbar
-  - if login?
+  - if admin_user?
     .btn-group.mr-2
       = link_to t('simple_form.btn.edit'), edit_mob_path(@mob), class: "btn btn-primary"
   .btn-group.mr-2
