マップエリアの複数化対応

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -36,6 +36,7 @@ html lang="en"
                 = link_to 'マップエリア', map_areas_path, {class: "dropdown-item"}
                 = link_to 'モンスター', mobs_path, {class: "dropdown-item"}
                 = link_to 'モンスター・アイテム', mob_items_path, {class: "dropdown-item"}
+                = link_to 'モンスター・マップエリア', mob_map_areas_path, {class: "dropdown-item"}
 
           li.nav-item = link_to "このサイトについて", static_pages_info_path, {class: "nav-link"}
           li.nav-item = link_to "更新履歴＆予定", static_pages_update_path, {class: "nav-link"}
