DROPモンスリストをエリアでアコーディオン化

--- a/app/views/items/show.html.slim
+++ b/app/views/items/show.html.slim
@@ -21,7 +21,7 @@ hr
   .card-header
     strong = "#{t('.mob.name')}:"
   .card-body
-    = render 'shared/list', list: @item.mobs
+    = render 'shared/mob_list', map_area_mobs: @item.map_area_mobs
 
 hr
 .btn-toolbar
