--- a/app/views/items/_card.html.slim
+++ b/app/views/items/_card.html.slim
@@ -5,7 +5,7 @@
   meta name="og:title" content="#{Settings.system[:title]}:#{@item.name}をDROPするのは…"
   meta name="og:description" content="#{Settings.system[:description]}"
   - src = 'eyecatch.jpg'
-  - src = @item.image.to_s if @item.image.present?
+  - src = @item.image.url if @item.image.present?
   meta name="og:image" content="#{image_path(src)}"
 - else
   = render 'layouts/card'
