--- a/app/views/mobs/_card.html.slim
+++ b/app/views/mobs/_card.html.slim
@@ -5,7 +5,7 @@
   meta name="og:title" content="#{Settings.system[:title]}:#{@mob.name}のDROPは…"
   meta name="og:description" content="#{Settings.system[:description]}"
   - src = 'eyecatch.jpg'
-  - src = @item.image.to_s if @mob.image.present?
+  - src = @mob.image.url if @mob.image.present?
   meta name="og:image" content="#{image_path(src)}"
 - else
   = render 'layouts/card'
