TOPのメッセージを変更

--- a/app/views/portals/index.html.slim
+++ b/app/views/portals/index.html.slim
@@ -19,9 +19,9 @@
         br
         br
         h2.font-weight-bold style="color: white;"
-          = "いつもご協力ありがとうございます。"
+          = "このアイテムが欲しい！でも、どこ行けばいいの？"
           p
-          = "皆様のご協力で成り立っています♪ご自由に編集ください。"
+          = "アイテム検索から、DROPするモンスターを探してください。"
     - unless current_user.present?
       .row
         .col-sm-10
