TOPのメッセージを変更

--- a/app/views/portals/index.html.slim
+++ b/app/views/portals/index.html.slim
@@ -50,7 +50,7 @@
             p
               = image_tag "edit.jpg", size: "250x250"
             p
-              = "Twitter経由でログインすることで、自由に編集が可能になります。"
+              = "Twitter経由でログインすることで、自由に編集が可能になります。※未実装"
       .col-sm-4
         .main2-sub
           h3
