--- a/app/views/items/_form.html.slim
+++ b/app/views/items/_form.html.slim
@@ -14,6 +14,6 @@
       .form-actions
         = f.button :submit, class: "btn btn-primary"
     .btn-group.mr-2
-      = link_to t('simple_form.btn.back'), item_kinds_path, class: "btn btn-secondary"
+      = link_to t('simple_form.btn.back'), items_path, class: "btn btn-secondary"
   
   hr
