--- a/app/views/mobs/_card.html.slim
+++ b/app/views/mobs/_card.html.slim
@@ -6,6 +6,6 @@
   meta name="og:description" content="#{Settings.system[:description]}"
   - src = 'eyecatch.jpg'
   - src = @mob.image.url if @mob.image.present?
-  meta name="og:image" content="#{image_path(src)}"
+  meta name="og:image" content="#{Settings.system[:url]}/#{image_path(src)}"
 - else
   = render 'layouts/card'
