--- a/app/views/portals/index.html.slim
+++ b/app/views/portals/index.html.slim
@@ -22,6 +22,8 @@
           = "このアイテムが欲しい！でも、どこ行けばいいの？"
           p
           = "アイテム検索から、DROPするモンスターを探してください。"
+        h3.font-weight-bold style="color: white;"
+          = "※その他、メニューより色々な検索も可能です。"
     - unless current_user.present?
       .row
         .col-sm-10
