--- a/app/views/mobs/index.html.slim
+++ b/app/views/mobs/index.html.slim
@@ -2,10 +2,10 @@ h1 = t('.title')
 hr
 = search_form_for @q do |f|
   .row
-    .col-sm-5
+    .col-sm-12
       = f.label :map_area_id_in, t('activerecord.attributes.mob.map_area')
       br
-      = f.collection_select :mob_map_areas_map_area_id_in, MapArea.all, :id, :name, {}, {class: 'form-control multiselect multiselect-primary', multiple: true}
+      = f.collection_select :mob_map_areas_map_area_id_in, MapArea.all, :id, :name, {include_blank: '指定なし'}, {class: 'form-control multiselect multiselect-primary', multiple: true}
       = f.input :name_cont, required: false, label: t('activerecord.attributes.mob.name')
       = hidden_field_tag :mode, params[:mode]
   .btn-toolbar
