--- a/app/views/portals/mypage.html.slim
+++ b/app/views/portals/mypage.html.slim
@@ -5,6 +5,10 @@ hr
     .col-sm-5
       = f.input :name_cont, required: false, label: t('activerecord.attributes.site_kind.name')
       = hidden_field_tag :mode, params[:mode]
+  .row
+    .col-sm-12
+      = f.label t('activerecord.attributes.item.item_kind')
+      = f.collection_select :item_kind_id_in, ItemKind.all, :id, :name, {include_blank: '指定なし'}, {class: 'form-control multiselect multiselect-primary', multiple: true}
   .btn-toolbar
     .btn-group.mr-2
       = button_tag type: 'submit', class: "btn btn-primary"
@@ -16,12 +20,14 @@ hr
 table.table.table-striped.table-hover.table-responsive.table-bordered
   thead
     tr
+      th = sort_link(@q, :item_kind_name, t('activerecord.attributes.item.item_kind'))
       th = sort_link(@q, :name)
       th
 
   tbody
     - @items.each do |item|
       tr
+        td = item.item_kind.name
         td = item.name
         td
           = link_to t('simple_form.btn.show'), item_path(item), class: 'btn btn-light'
